<resources>
    <string name="app_name">FavCode54</string>

    <!--Fonts-->
    <string name="customFont">fonts/OpenSans-Regular.ttf</string>
    <string name="customFontBold">fonts/OpenSans-Bold.ttf</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="learn">Learn</string>
    <string name="get_jobs">Get Jobs</string>
    <string name="score_sheet">Score Sheet</string>
    <string name="projects">Projects</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="our_team">Our Team</string>

    <!--Volley-->
    <string name="connect_time_o">Connection timed out</string>
    <string name="no_connect_err">No internet connection found. \nCheck your connection and try again</string>
    <string name="auth_error">Authentication failure</string>
    <string name="server_error">Server failure</string>
    <string name="network_error">Network failure. \nCheck your connection and try again</string>
    <string name="parse_error">Parsing failure</string>
    <string name="sth_wrong_try_again">Oops! Something went wrong. \nPlease try again</string>


    <string name="action_comments">Comments</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_comment">Comments</string>
    <string name="action_share">Share</string>
    <string name="tab_all">All</string>
    <string name="loading_categories">Loading categories…</string>
    <string name="loading_articles">Loading articles…</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_send_to_wear">Send to my watch</string>
    <string name="error_load_categories">Network error. Failed to load categories.</string>
    <string name="error_load_posts">Network error. Failed to load articles.</string>
    <string name="action_retry">Retry</string>
    <string name="search_hint">Enter search query here</string>
    <string name="search_result">Search Result for</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">About Favcode54</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="our_history">Our history</string>
    <string name="about_intro"><![CDATA[FavCode54 is a non-profit initiative that aims to teach, mentor, and build the next generation of African Software Developers, using everyday people with no skills and turning them into tech geniuses fully equipped to work with tech companies in their local communities & Globally.]]></string>
    <string name="our_history_excerpt">FavCode started as a burning passion of Favour Ori to train and teach people how to code, and to be able to connect them with the right tech jobs in Africa. The end goal is to get people off the streets away from drugs and scamming, and gear their talents towards something productive like making Africa a huge tech hub. \n\n FavCode does not require you to know programming or have a degree. We make you into the genius that most tech companies are looking for.\n\n  We train you with our group of most qualified mentors and trainers who went to IVY league schools like Harvard, Yale, Princeton, and who have worked with Technology companies like Facebook, Google, Apple, IBM, Instagram, Snapchat, etc. We have what you need to get started. \n\n All we need from you is a passion for change in Africa through Technology.</string>
    <string name="our_mission">Our mission</string>
    <string name="our_mission_excerpt">A non-profit initiative to teach, mentor, and develop the next generation of African Software developers. Using everyday people with no skills and making them tech geniuses to work with tech companies in their communities.</string>
    <string name="our_vision">Our vision</string>
    <string name="our_vision_excerpt">To train 30,000 youths in 5years and connect them with technology firms that will utilize their newly acquired skills and innovative mindset in Africa.</string>
    <string name="our_goal">Our goal</string>
    <string name="our_goal_excerpt">To Invade africa with technology and in the process eradicate poverty through innovations.</string>
    <string name="favcode_email">\@favcode54.org</string>
    <string name="endpoint_root">https://portal.favcode54.org/API/</string>
    <string name="title_activity_course">CourseActivity</string>

</resources>
