<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.favcode54.AboutUs"
    tools:showIn="@layout/activity_about_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/about_intro"
            android:textColor="#a000"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:background="#2000"/>
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#d000"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_history"
            />
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a000"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_history_excerpt"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:background="#2000"/>
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#d000"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_mission"
            />
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a000"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_mission_excerpt"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:background="#2000"/>
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#d000"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_goal"
            />
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a000"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_goal_excerpt"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:background="#2000"/>
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#d000"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_vision"
            />
        <org.favcode54.views.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a000"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/our_vision_excerpt"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
